package _04_Graphics.D_Animaciones.Game;

import java.awt.*;

public interface Dibujable {
    public void dibujar(Graphics g);
    public void actualizar();
}
